--- a/de.broscode.wsv.domain/pom.xml
+++ b/de.broscode.wsv.domain/pom.xml
@@ -81,4 +81,10 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<parent>
+		<groupId>de.broscode.wsv</groupId>
+		<artifactId>de.broscode.wsv.parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../de.broscode.wsv/pom.xml</relativePath>
+	</parent>
 </project>
