--- a/de.broscode.wsv.interfaces/pom.xml
+++ b/de.broscode.wsv.interfaces/pom.xml
@@ -101,4 +101,10 @@
   		<version>3.1</version>
   	</dependency>
   </dependencies>
+  <parent>
+		<groupId>de.broscode.wsv</groupId>
+		<artifactId>de.broscode.wsv.parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../de.broscode.wsv/pom.xml</relativePath>
+	</parent>
 </project>
